# AIGateway

./: README.md  identity.yaml.example  main.py  pyproject.toml
apps/gateway/: pyproject.toml
apps/gateway/src/gateway/: __init__.py  auth.py  config.py  errors.py  main.py  middleware.py  screening.py
apps/gateway/src/gateway/routes/: chat.py
policies/: default.yaml
tests/: conftest.py  smoke_failures.sh  test_auth.py  test_failure_modes.py  test_identity.py  test_policy_schema.py  test_screening_integration.py  test_secrets_detector.py
