[project]
name = "ai-gateway"
version = "0.0.1"
description = "Self-hosted AI gateway with policy-based screening"
requires-python = ">=3.12"
dependencies = [
    "gateway",
]

[tool.uv.workspace]
members = ["apps/gateway", "packages/core", "packages/providers", "packages/policy", "packages/detectors", "packages/identity"]

[tool.uv.sources]
core = { workspace = true }
providers = { workspace = true }
policy = { workspace = true }
detectors = { workspace = true }
identity = { workspace = true }
gateway = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.22",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = [
    "apps/gateway/src",
    "packages/core/src",
    "packages/providers/src",
    "packages/policy/src",
    "packages/detectors/src",
    "packages/identity/src",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
